<resources>
    <string name="app_name">GoGreen_Android</string>
    <string name="action_settings">Settings</string>
    <string name="hint">hint</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo_or_image_to_display_during_login_signup">Logo or image to display during login/signup</string>
    <string name="sign_up"><u>Sign up</u></string>
    <!--<string name="username">Username</string>-->
    <string name="title_activity_my__score">My_Score</string>
    <string name="title_activity_my_score">MyScore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="username">Username</string>
    <string name="userid">UserId#</string>
    <string name="my_score">My Score</string>
    <string name="score">0000</string>
    <string name="vegMealCount">00</string>
    <string name="outOfmod50">50</string>
    <string name="title_activity_reduced_emission">reducedEmission</string>
    <string name="reduced_emission_title">Reduced Emission</string>
    <string name="total_co2_reduced">420</string>
    <string name="co2_reduced_vegMeal">420</string>
    <string name="kg_co2">kg CO2</string>
    <string name="app_name_nav">Go Green for Android</string>
    <string name="user_name">username</string>
    <!--<string name="my_score">My Score</string>-->
    <string name="reduced_emssion">Reduced Emssion</string>
    <string name="my_basecase">My Basecase</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_inOfMod50">0</string>
    <!--<string name="wrongCreds">Your username or password is incorrect</string>-->
</resources>
