<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MyScore"
    tools:showIn="@layout/activity_my_score">

    <pl.pawelkleczkowski.customgauge.CustomGauge
        android:id="@+id/veg_meals_eaten"
        android:layout_width="184dp"
        android:layout_height="184dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        app:gaugePointStartColor="@color/colorSecondary"
        app:gaugePointEndColor="@color/colorSecondary"
        app:gaugeStartValue="0"
        app:gaugeEndValue="50"
        app:gaugeStartAngle="135"
        app:gaugeStrokeCap="ROUND"
        app:gaugeStrokeWidth="15dp"
        app:gaugeSweepAngle="270"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veggieMealsEaten" />

    <TextView
        android:id="@+id/your_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="Your Score:"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/back"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:text=""
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_score" />

    <TextView
        android:id="@+id/veggieMealsEaten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="9dp"
        android:text="Vegetarian meals eaten:"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_Score" />

    <lecho.lib.hellocharts.view.PieChartView
        android:id="@+id/travelChart"
        android:layout_width="184dp"
        android:layout_height="184dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howYouTravel" />

    <TextView
        android:id="@+id/howYouTravel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="How your travel:"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/veg_meals_eaten" />

    <TextView
        android:id="@+id/nbVeggieMeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vegMealCount"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/veg_meals_eaten"
        app:layout_constraintEnd_toEndOf="@+id/veg_meals_eaten"
        app:layout_constraintStart_toStartOf="@+id/veg_meals_eaten"
        app:layout_constraintTop_toTopOf="@+id/veg_meals_eaten"
        app:layout_constraintVertical_bias="0.45999998" />

    <TextView
        android:id="@+id/outOfMod50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/outOfmod50"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/veg_meals_eaten"
        app:layout_constraintEnd_toEndOf="@+id/veg_meals_eaten" />

    <TextView
        android:id="@+id/inOfMod50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/_inOfMod50"
        app:layout_constraintBottom_toBottomOf="@+id/veg_meals_eaten"
        app:layout_constraintStart_toStartOf="@+id/veg_meals_eaten" />

</android.support.constraint.ConstraintLayout>