<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ReducedEmission"
    tools:showIn="@layout/activity_reduced_emission">

    <TextView
        android:id="@+id/emission_roomTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingHorizontal="5dp"
        android:text="@string/co2_reduced_vegMeal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/roomTemp"
        app:layout_constraintTop_toTopOf="@+id/roomTemp" />

    <TextView
        android:id="@+id/emission_veg_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingHorizontal="5dp"
        android:text="@string/co2_reduced_vegMeal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/veg_meals"
        app:layout_constraintTop_toTopOf="@+id/veg_meals" />

    <TextView
        android:id="@+id/emission_solarPanels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingHorizontal="5dp"
        android:text="@string/co2_reduced_vegMeal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/solarPanels"
        app:layout_constraintTop_toTopOf="@+id/solarPanels" />

    <TextView
        android:id="@+id/emission_pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingHorizontal="5dp"
        android:text="@string/co2_reduced_vegMeal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/pt"
        app:layout_constraintTop_toTopOf="@+id/pt" />

    <TextView
        android:id="@+id/emission_localProduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingHorizontal="5dp"
        android:text="@string/co2_reduced_vegMeal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/localProduce"
        app:layout_constraintTop_toTopOf="@+id/localProduce" />

    <TextView
        android:id="@+id/emission_bike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:paddingHorizontal="5dp"
        android:text="@string/co2_reduced_vegMeal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/bike"
        app:layout_constraintTop_toTopOf="@+id/bike" />

    <TextView
        android:id="@+id/totalEmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/back"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp"
        android:text="@string/total_co2_reduced"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_reduced_emission" />

    <TextView
        android:id="@+id/total_reduced_emission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="Total Emssion Reduced:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:text="@string/kg_co2"
        app:layout_constraintBottom_toBottomOf="@+id/totalEmission"
        app:layout_constraintStart_toEndOf="@+id/totalEmission"
        app:layout_constraintTop_toTopOf="@+id/totalEmission" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="Your reduced emissions: "
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalEmission" />

    <TextView
        android:id="@+id/veg_meals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="Vegetarian meals: "
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/bike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Bike: "
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/veg_meals"
        app:layout_constraintTop_toBottomOf="@+id/veg_meals" />

    <TextView
        android:id="@+id/pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Public Transportation: "
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/bike"
        app:layout_constraintTop_toBottomOf="@+id/bike" />

    <TextView
        android:id="@+id/localProduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Local Produce:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/pt"
        app:layout_constraintTop_toBottomOf="@+id/pt" />

    <TextView
        android:id="@+id/roomTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Lowering Room Temperatures:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/localProduce"
        app:layout_constraintTop_toBottomOf="@+id/localProduce" />

    <TextView
        android:id="@+id/solarPanels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="Using Solar Panels:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/roomTemp"
        app:layout_constraintTop_toBottomOf="@+id/roomTemp" />

</android.support.constraint.ConstraintLayout>